<resources>
    <string name="app_name">My Application34</string>
    <string name="log_in_here">Log in Here</string>
    <string name="email_user">Email_user</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account_sign_up_here">Don\'t have account? Sign up here</string>
    <string name="current_enrollment">Current Enrollment:</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="dashboard">Dashboard</string>
    <string name="courses_enrolled">Courses enrolled:</string>
    <string name="cgpa">CGPA:</string>
    <string name="weekly_attendence">Weekly Attendance:</string>
    <string name="courses_encrolled">Courses Encrolled</string>
    <string name="courses_enrolled2">Courses Enrolled</string>
    <string name="courses_enrolled3">Courses Enrolled:</string>
    <string name="total_earned_credits">Total Earned Credits:</string>
    <string name="semester_fee">Semester Fee:</string>
    <string name="class_schedules">Class Schedules:</string>
    <string name="dahboard">Dashboard</string>
    <string name="academic_info">Academic Info</string>
    <string name="result_summary">Result Summary</string>
    <string name="attendance">Attendance</string>
    <string name="schedule_and_notices">Schedule and Notices</string>
    <string name="account_section">Financial Info</string>
</resources>